src/test/deca/syntax/valid/test_synt/variables/var_egale_var.deca
// Description:
//    Test dans lequel on 
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//
// Historique:
//    cree le 12/01/2022

{
    int x,y,z  ;   
    x = 5  ;
    y = 6 ;
    z = x + y ; 
   print(z) ;
}
